--- a/index.html
+++ b/index.html
@@ -20,44 +20,204 @@
 
   <!-- Extra Codiqa features -->
   <!--<script src="https://d10ajoocuyu32n.cloudfront.net/codiqa.ext.js"></script>-->
-  
-</head>
 <script>
-function startTime()
+window.setTimeout("refresh()", 60000)
+
+function refresh()
 {
-  
-var today=new Date();
-var h=today.getHours();
-var m=today.getMinutes();
-var s=today.getSeconds();
-// add a zero in front of numbers<10
-m=checkTime(m);
-s=checkTime(s);
-document.getElementById('txt').innerHTML=h+":"+m+":"+s;
-t=setTimeout(function(){startTime()},500);
+var nowtime = new Date();
+if ((nowtime.getHours() == 12 || nowtime.getHours() == 0) && nowtime.getMinutes() == 0)
+location.reload();
+
+window.setTimeout("refresh()", 60000)
 }
 
-function checkTime(i)
+function startTime()
 {
+  var nowtime=new Date();
+  var tomorrowday = nowtime.getDay()+1;
+  var h=nowtime.getHours();
+  var m=nowtime.getMinutes();
+  var s=nowtime.getSeconds();
+// add a zero in front of numbers<10
+  m=checkTime(m);
+  s=checkTime(s);
+  checkTomorrow(tomorrowday);
+  document.getElementById('txt').innerHTML=h+":"+m+":"+s;
+  t=setTimeout(function(){startTime()},500);
+}
+
+function checkTomorrow(i)
+{
+  switch(i){
+    case 0:
+      document.getElementById('tomorrow').innerHTML = "Sunday";
+      break;
+    case 1:
+      document.getElementById('tomorrow').innerHTML = "Monday";
+      break;
+    case 2:
+      document.getElementById('tomorrow').innerHTML = "Tuesday";
+      break;
+    case 3:
+      document.getElementById('tomorrow').innerHTML = "Wednesday";
+      break;
+    case 4:
+      document.getElementById('tomorrow').innerHTML = "Thursday";
+      break;
+    case 5:
+      document.getElementById('tomorrow').innerHTML = "Friday";
+      break;
+    case 6:
+      document.getElementById('tomorrow').innerHTML = "Saturday";
+      break;
+  }
+  
   navigator.mozSetMessageHandler(
     "alarm",
     function (msg) {
         alert(JSON.stringify(msg));
       }
-);
-  
+  );
+}
+
+function checkTime(i)
+{ 
 if (i<10)
   {
   i="0" + i;
   }
 return i;
 }
-
 </script>
+</head>
+
+
 <body onload="startTime()" >
 <!-- Home -->
 <div data-role="page" id="page1">
     <div data-role="content">
+    <label id="to">
+            明日
+    </label>
+    <label id="tomorrow">
+            time
+    </label>
+    <label id="to">
+            起床時間:
+    </label>
+    <fieldset data-role="controlgroup" data-type="horizontal">
+    <legend>clock</legend>
+    <label for="select-choice-day">上午</label>
+    <select name="select-choice-month" id="select-choice-day">
+      <option value="morning">上午</option>
+      <option value="after">下午</option>
+      <!-- etc. -->
+    </select>
+ 
+    <label for="select-choice-hours">hours</label>
+    <select name="select-choice-day" id="select-choice-hours">
+      <option value="1">1</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5</option>
+      <option value="6">6</option>
+      <option value="7">7</option>
+      <option value="8">8</option>
+      <option value="9">9</option>
+      <option value="10">10</option>
+      <option value="11">11</option>
+      <option value="12">12</option>
+      <!-- etc. -->
+    </select>
+ 
+    <label for="select-choice-mins">min</label>
+    <select name="select-choice-year" id="select-choice-mins">
+      <option value="1">1</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5</option>
+      <option value="6">6</option>
+      <option value="7">7</option>
+      <option value="8">8</option>
+      <option value="9">9</option>
+      <option value="10">10</option>
+      <option value="11">11</option>
+      <option value="12">12</option>
+      <option value="13">13</option>
+      <option value="14">14</option>
+      <option value="15">15</option>
+      <option value="16">16</option>
+      <option value="17">17</option>
+      <option value="18">18</option>
+      <option value="19">19</option>
+      <option value="20">20</option>
+      <option value="21">21</option>
+      <option value="22">22</option>
+      <option value="23">23</option>
+      <option value="24">24</option>
+      <option value="25">25</option>
+      <option value="26">26</option>
+      <option value="27">27</option>
+      <option value="28">28</option>
+      <option value="29">29</option>
+      <option value="30">30</option>
+      <option value="31">31</option>
+      <option value="32">32</option>
+      <option value="33">33</option>
+      <option value="34">34</option>
+      <option value="35">35</option>
+      <option value="36">36</option>
+      <option value="37">37</option>
+      <option value="38">38</option>
+      <option value="39">39</option>
+      <option value="40">40</option>
+      <option value="41">41</option>
+      <option value="42">42</option>
+      <option value="43">43</option>
+      <option value="44">44</option>
+      <option value="45">45</option>
+      <option value="46">46</option>
+      <option value="47">47</option>
+      <option value="48">48</option>
+      <option value="49">49</option>
+      <option value="50">50</option>
+      <option value="51">51</option>
+      <option value="52">52</option>
+      <option value="53">53</option>
+      <option value="54">54</option>
+      <option value="55">55</option>
+      <option value="56">56</option>
+      <option value="57">57</option>
+      <option value="58">58</option>
+      <option value="59">59</option>
+      <!-- etc. --> 
+    </select>
+  </fieldset>
+  <fieldset data-role="controlgroup" data-type="horizontal">
+     <a id="check" data-role="button" href="#page1" data-icon="star" data-iconpos="left">
+            保存
+      </a>
+      <a id="close" data-role="button" href="#page1" data-icon="star" data-iconpos="left">
+            關閉
+      </a>
+  </fieldset>
+
+        <a id="test" data-role="button" href="#page1" data-icon="star" data-iconpos="left">
+            檢查
+        </a>
+        <a id="clear" data-role="button" href="#page1" data-icon="star" data-iconpos="left">
+            清除
+        </a>
+        <a id="other" data-role="button" href="#page1" data-icon="star" data-iconpos="left">
+            檢查每一天起床的鬧鐘時間
+        </a>
+        <a id="txt" data-role="button" href="#page1" data-icon="star" data-iconpos="left">
+            檢查每一天起床的鬧鐘時間
+        </a>
+
         <h2 id="t0">
             t0 hello world
         </h2>
@@ -70,21 +230,6 @@ return i;
         <h2 id="t3">
             t3 hello world
         </h2>
-        <a id="txt" data-role="button" href="#page1" data-icon="star" data-iconpos="left">
-            time
-        </a>
-        <a id="pick-image" data-role="button" href="#page1" data-icon="star" data-iconpos="left">
-            pick-image
-        </a>
-        <a id="check" data-role="button" href="#page1" data-icon="star" data-iconpos="left">
-            check
-        </a>
-        <a id="test" data-role="button" href="#page1" data-icon="star" data-iconpos="left">
-            test
-        </a>
-        <a id="clear" data-role="button" href="#page1" data-icon="star" data-iconpos="left">
-            clear all
-        </a>
         
     </div>
 </div>
