change ring-snooze disabled

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       </section>
       <menu>
         <button id="ring-close" disabled>Close</button>
-        <button id="ring-snooze"class="recommend">Snooze</button>
+        <button id="ring-snooze"class="recommend" disabled>Snooze</button>
       </menu>
     </form>
     <section>
